<resources>
    <string name="app_name">Tulo- ja menolaskuri</string>
    <string name="addNew">Lisää tulo\ntai meno</string>
    <string name="monthly">Kuukausittaiset\ntulot ja menot</string>
    <string name="yearly">Vuosittaiset\ntulot ja menot</string>
    <string name="cancel">Peruuta</string>
    <string name="save">Tallenna</string>
    <string name="addEntry">Lisää tapahtuma</string>
    <string name="editEntry">Muokkaa tapahtumaa</string>
    <string name="income">Tulo</string>
    <string name="expense">Meno</string>
    <string name="enterSum">Syötä summa (€)</string>
    <string name="chooseDate">Valitse päivämäärä</string>
    <string name="leftArrow">&lt;</string>
    <string name="rightArrow">&gt;</string>
    <string name="descriptionHint">Tapahtuman kuvaus\n(ainakin 2 merkkiä)</string>

</resources>
