<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/addEntryTitle"
        android:text="@string/addEntry" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:orientation="vertical">

        <RadioButton
            style="@style/radioBtn"
            android:text="@string/income"/>

        <RadioButton
            style="@style/radioBtn"
            android:text="@string/expense" />

    </RadioGroup>

    <EditText
        android:id="@+id/enteredSum"
        style="@style/sumEditText"
        android:hint="@string/enterSum" />

    <TextView
        style="@style/datePickerText"
        android:text="@string/chooseDate"
        android:onClick="onSetDatePressed"
        android:layout_marginTop="35dp" />

    <TextView
        style="@style/datePickerText"
        android:id="@+id/dateText"
        android:onClick="onSetDatePressed"
        android:layout_marginTop="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <Button
            style="@style/addNewBtn"
            android:onClick="onCancelPressed"
            android:background="#ccc"
            android:text="@string/cancel" />

        <Button
            style="@style/addNewBtn"
            android:onClick="onSavePressed"
            android:text="@string/save" />

    </LinearLayout>

</LinearLayout>