<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/addNew"
        style="@style/btn"
        android:onClick="onAddNewPressed"
        android:text="@string/addNew"
        android:layout_above="@+id/monthly"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"/>

    <Button
        android:id="@+id/monthly"
        android:onClick="onMonthlyViewPressed"
        style="@style/btn"
        android:text="@string/monthly"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/yearly"
        style="@style/btn"
        android:text="@string/yearly"
        android:layout_below="@+id/monthly"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

</RelativeLayout>